# Animal-Disease-Prediction

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
backend/: app.py  routes.py
notebooks/: Evaluation.ipynb  ModelTraining.ipynb  PreProcessing.ipynb  Visualization.ipynb
src/: main.py  test.py
src/animal_disease_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/animal_disease_prediction/data/: feature_scaling.py  load_data.py  preprocessing.py  preprocessing_input.py
src/animal_disease_prediction/dev/: test.py
src/animal_disease_prediction/models/: train_model.py
src/animal_disease_prediction/pipelines/: model_development.py  prediction_pipeline.py
src/animal_disease_prediction/prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/animal_disease_prediction/utils/: config.py
src/data/: feature_scaling.py  load_data.py  preprocessing.py  preprocessing_input.py
src/models/: class_dicts.json  constant_filter.joblib  encoders.joblib  evaluate_model.py  one_hot_encoder.joblib  predict.py  rf_model.joblib  scaler.joblib  selector.joblib  train_model.py  xgb_model.joblib
src/pipelines/: model_development.py  prediction_pipeline.py
src/utils/: load_objects.py
