[build-system]
requires = ["setuptools>=42", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "animal_disease_prediction"
version = "0.1.0"  # Or use a dynamic version
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.3",
    "matplotlib>=3.4.0",
    "seaborn>=0.13.2",
    "joblib",
    "xgboost",
    "scipy",
    "importlib",
]

authors = [{ name = "Jonathan Shiju", email = "jonathanshiju2003@gmail.com" }]
description = "Predicting diseases in animals using ML models"
readme = "README.md"
keywords = ["Animal", "Disease", "Prediction", "Cattle", "Birds", "Cats", "Dogs"]

[project.optional-dependencies]
dev = ["pytest>=6.2"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["data*"]

[tool.setuptools.package-data]
"animal_disease_prediction" = ["data/*.csv"]
